# ollama-mcp-bridge

./: .dockerignore  .gitignore  Dockerfile  Makefile  chat.sh  docker-compose.yml  mcp-config.json  pgdump.sql  pyproject.toml
.db/: init.sql
.db/migrations/: 000001_init-schema.down.sql  000001_init-schema.up.sql  000002_procedural_memory.down.sql  000002_procedural_memory.up.sql
.github/workflows/: keybase-notify.yml
docs/: skills.md
embeddings/: fetch_embeddings.py  generate.sh  generate_embeddings.py  pyproject.toml
mcp-sandbox/: Dockerfile  pyproject.toml
mcp-sandbox/server/: main.py  tools.py
mcp-servers/db-query-mcp-server/: db.py  main.py  pyproject.toml  (+1 more)
mcp-skills/: skill_01_explicit_columns.md  skill_02_always_limit.md  skill_03_count_before_fetch.md  skill_04_read_only.md  skill_05_schema_inspection.md  skill_06_null_handling.md  skill_07_datetime_queries.md  skill_08_text_search.md  skill_09_join_construction.md  skill_10_aggregation.md  skill_11_result_summarisation.md  skill_12_error_handling.md  skill_13_pagination.md  skill_14_disambiguation.md  skill_15_cte_usage.md  skill_16_window_functions.md  skill_17_explain_check.md  skill_18_type_casting.md  skill_19_response_structure.md  skill_20_avoid_n_plus_1.md  skill_21_token_budget.md  skill_22_postgres_syntax.md  skill_23_safe_values.md  skill_24_plan_before_query.md
simple-frontend/: dashboard.html  data-explorer.html  index.html  settings.html
simple-ollama-chat/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.ts
tests/: test_unit.py
(+28 files in other folders)
