[project]
name = "mcp-sandbox"
version = "0.1.0"
description = "Docker based MCP sandbox for analytics agents"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.9.4,<2.0.0",
    "fastapi~=0.119.0",
    "loguru~=0.7.3",
    "uvicorn~=0.38.0",
    
    # Analytics stack
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    "scikit-learn==1.5.0",
    "matplotlib==3.9.0",
    "seaborn==0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
mcp-sandbox = "server.main:main"